# PlanetLab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
PlanetLab/res/scene/: 3Layers.ini  Dagoba.ini  Ubi.ini  blue.ini  panet02.ini
PlanetLab/res/shaders/: Default.frag  Gizmo.frag  Point.frag  Point.vert  Skybox.frag  normal.frag
PlanetLab/src/: Log.cpp  Log.hpp  common.hpp  main.cpp
PlanetLab/src/editor/: AppLog.hpp  Application.cpp  Application.hpp  Editor.cpp  Editor.hpp  EditorSettings.cpp  EditorSettings.hpp  NoiseSettingsParameters.cpp  NoiseSettingsParameters.h  NoiseSettingsParameters.hpp  Parameter.cpp  Parameter.hpp  ParameterFactory.hpp  UINoiseLayer.cpp  UINoiseLayer.hpp  UiObserver.cpp  UiObserver.hpp
PlanetLab/src/editor/panels/: SettingsPanel.cpp  SettingsPanel.hpp  Viewer2DPanel.cpp  Viewer2DPanel.hpp  Viewer3DPanel.cpp  Viewer3DPanel.hpp
PlanetLab/src/editor/ui/: BackgroundGradient.cpp  BackgroundGradient.hpp
PlanetLab/src/editor/ui/gizmo/: Gizmo.cpp  GizmoAxis.hpp
PlanetLab/src/engine/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  Skybox.hpp  SpriteSheet.cpp  SpriteSheet.hpp  StaticMesh.cpp  StaticMesh.hpp  Window.cpp  Window.hpp
PlanetLab/src/engine/lighting/: BaseLight.cpp  BaseLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  LightManager.cpp  LightManager.hpp  PointLight.cpp  PointLight.hpp
PlanetLab/src/engine/opengl/: Framebuffer.cpp  Framebuffer.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
PlanetLab/src/engine/shape/: ShapeCube.cpp  ShapeCube.hpp  ShapeSphere.cpp  ShapeSphere.hpp
PlanetLab/src/event/: Input.cpp  Input.hpp  InputHandler.cpp  InputHandler.hpp
PlanetLab/src/imgui/: imgui_color_gradient.cpp  imgui_color_gradient.h  imgui_groupPanel.hpp
PlanetLab/src/io/: IOManager.cpp  IOManager.hpp  ini.h
PlanetLab/src/ui/: BackgroundGradient.cpp  BackgroundGradient.hpp  Interface.cpp  Interface.hpp  UiObserver.cpp  UiObserver.hpp
PlanetLab/src/ui/gizmo/: Gizmo.hpp  GizmoAxis.cpp
docs/: orga.txt
include/Ceres/: ColorSettings.cpp  ColorSettings.hpp  Planet.cpp  Planet.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp  ShapeSettings.cpp  ShapeSettings.hpp  TerrainFace.cpp  TerrainFace.hpp
include/Ceres/color/: Color.cpp  Color.hpp
include/Ceres/noise/: NoiseFilter.cpp  NoiseFilter.hpp  NoiseFilterFactory.hpp  NoiseLayer.cpp  NoiseLayer.hpp  NoiseLayerFactory.hpp  NoiseSettings.cpp  NoiseSettings.hpp  RigidNoiseFilter.cpp  RigidNoiseFilter.hpp  RigidNoiseLayer.cpp  RigidNoiseLayer.hpp  SimpleNoiseFilter.cpp  SimpleNoiseFilter.hpp  SimpleNoiseLayer.cpp  SimpleNoiseLayer.hpp
include/Ceres/observer/: IObserver.hpp  ISubject.hpp  PlanetSubject.cpp  PlanetSubject.hpp
res/scene/: test.ini
res/shaders/: BackgroundGradient.frag  BackgroundGradient.vert  Default.vert  DefaultLighting.frag  Gizmo.frag  Gizmo.vert  Planet.frag  Planet.vert
src/: common.hpp  main.cpp
src/editor/: AppLog.hpp  Parameter.hpp  ParameterFactory.hpp  imgui_color_gradient.cpp  imgui_color_gradient.h
src/engine/: Application.cpp  Application.hpp  BackgroundGradient.cpp  BackgroundGradient.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Input.cpp  Input.hpp  InputHandler.cpp  InputHandler.hpp  Log.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  ProceduralEditor.cpp  ProceduralEditor.hpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  SpriteSheet.cpp  SpriteSheet.hpp  StaticMesh.cpp  StaticMesh.hpp  Window.cpp  Window.hpp
src/engine/gizmo/: Gizmo.cpp  Gizmo.hpp  GizmoAxis.cpp  GizmoAxis.hpp
src/engine/shape/: ShapeCube.cpp  ShapeCube.hpp
src/hud/: Hud.cpp  Hud.hpp  ObserverHud.cpp  ObserverHud.hpp
src/io/: IOManager.cpp  IOManager.hpp
src/lighting/: BaseLight.cpp  LightManager.cpp
src/noise/: NoiseFilter.cpp  NoiseFilter.hpp  NoiseFilterFactory.hpp  NoiseSettings.cpp  NoiseSettings.hpp  RigidNoiseFilter.cpp  RigidNoiseFilter.hpp  SimpleNoiseFilter.cpp  SimpleNoiseFilter.hpp
src/opengl/: Framebuffer.cpp  Framebuffer.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Texture.cpp
src/planets/: ColorSettings.cpp  ColorSettings.hpp  Planet.cpp  Planet.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp  ShapeSettings.cpp  ShapeSettings.hpp  TerrainFace.cpp  TerrainFace.hpp
